Connected front to back end still need to write playAgain()

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>GUESS THE NUMBER</title>
+        <title>Guess The Number</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -25,7 +25,12 @@
           <h2>We have selected a number: 1 through 100</h2>
         </div>
         <div class="row">
-          <h2>You will be told if your guess is higher or lower</h2>
+          <div class="col-md">
+            <p id="guesses"></p>
+          </div>
+          <div class="col-md">
+            <p id="guess_status"></p>
+          </div>
         </div>
         <div class="row">
           <div class="col-sm">
@@ -38,7 +43,7 @@
             </div>
           </div>
           <div class="col-sm">
-            <p>You get 5 guesses.</p>
+            <p id="guesses_left">You get 5 guesses</p>
           </div>
         </div>
       </div>
