--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
         </div>
         <div class="row">
           <div class="col-sm">
-            <label for="guessField">Enter your number to guess!</label>
+            <label id="label_inst" for="guessField">Enter your number to guess!</label>
           </div>
           <div class="col-sm">
+            <p id="play_again"></p>
             <div id="inputs">
               <input type="text" id="guessField" class="guessField">
               <input type="submit" value="Guess" class="guessSubmit">
